[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/babas.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=2]
[ext_resource path="res://resources/audio/click.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/audio/hover.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
use_mipmaps = true
extra_spacing_top = 12
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="menu" type="Node"]
script = ExtResource( 2 )

[node name="back" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="control" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 726.0
custom_constants/separation = 16
alignment = 1

[node name="play" type="Button" parent="control"]
margin_top = 314.0
margin_right = 726.0
margin_bottom = 454.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = " Play the game"
align = 0

[node name="config" type="Button" parent="control"]
margin_top = 470.0
margin_right = 726.0
margin_bottom = 610.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = " edit config"
align = 0

[node name="escape" type="Button" parent="control"]
margin_top = 626.0
margin_right = 726.0
margin_bottom = 766.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = " Show disrespect"
align = 0

[node name="information" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
custom_fonts/font = SubResource( 3 )
text = "game name Quick
author Alexsander
control wasd space, ctrl, 
alt, ctrl, shift, keyboard.
version 16.04"
valign = 2

[node name="audio" type="Node" parent="."]

[node name="click" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 3 )

[node name="hover" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 4 )

[connection signal="button_down" from="control/play" to="." method="_on_play"]
[connection signal="button_down" from="control/play" to="." method="button_down"]
[connection signal="mouse_entered" from="control/play" to="." method="mouse_entered"]
[connection signal="button_down" from="control/config" to="." method="_on_config"]
[connection signal="button_down" from="control/config" to="." method="button_down"]
[connection signal="mouse_entered" from="control/config" to="." method="mouse_entered"]
[connection signal="button_down" from="control/escape" to="." method="_on_escape"]
[connection signal="button_down" from="control/escape" to="." method="button_down"]
[connection signal="mouse_entered" from="control/escape" to="." method="mouse_entered"]
